--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 
-  "homepage": "https://rida-e-fatima.github.io/Dragable Crads",
+  "homepage": "https://rida-e-fatima.github.io/Dragable-Cards/",
 
   "name": "docs_task",
 
